--- a/08-variables-from-IVENTORY.yaml
+++ b/08-variables-from-IVENTORY.yaml
@@ -1,4 +1,4 @@
-- name: Variables from play level
+- name: Variables from inventory level
   hosts: localhost 
   tasks:
     - name: check variables 
