--- a/inventory.ini
+++ b/inventory.ini
@@ -5,3 +5,5 @@ localhost
 Course="Linux DevOps"
 Trainer="Maverick"
 Duration="120 HRS"
+PERSON="Prem from INVENTORy"
+WISHES="Morning from INVENTORY"
