--- a/12-conditions.yaml
+++ b/12-conditions.yaml
@@ -1,5 +1,6 @@
 - name: conditions
   hosts: localhost 
+  become: yes
   tasks: 
     - name: check if roboshop user is exist or not 
       ansible.builtin.command: id roboshop 
